# stock-signal-analyzer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COWORK.md  README.md  config.py  main.py  pyproject.toml
.codex/: hooks.json
docs/: analysis_logic_evaluation.md  architecture.md  signals.md
docs/issues/: algo_comparison_report.md  llm-scoring-path-broken.md  recommendation-logic-improvements.md
docs/phase-001/: CHANGELOG.md  PHASE1_SUMMARY.md  USER_GUIDE.md  prd.md  todo.md
docs/retrospectives/: 2025-10-12-daily-reflection.md  2025-10-12-initial-development.md  2025-10-15-web-dashboard.md
launchd/: com.trading.daily-report.plist  com.trading.stock-signals.plist
poc-web/: .env.example  App.tsx  README.md  index.html  metadata.json  package.json  types.ts  vite-env.d.ts
poc-web/components/: ChatSidebar.tsx  ErrorState.tsx  PriceChart.tsx  PriceRangeIndicator.tsx  RubricChart.tsx  SectorBarChart.tsx  SectorMoneyFlowBoard.tsx  SectorRrgChart.tsx  Skeleton.tsx  StockCard.tsx  StockModal.tsx  StockRecommendCard.tsx  SupplyChart.tsx  TopSectorCard.tsx
poc-web/services/: apiService.ts  geminiService.ts
scripts/: build_frontend.sh  compare_recommendation_algorithms.py  install_daily_scheduler.sh  investment_performance_backtest.py  manage_daily_scheduler.sh  manage_scheduler.sh  performance_benchmark.py  performance_test.py  run_daily_report.sh  run_scheduled_report.sh  setup_scheduler.sh  test_report_generation.py  verify_llm_harness.py
tests/: conftest.py  test_analyzer.py  test_buy_signals.py  test_fixtures.py  test_market_analyzer.py  test_price_levels.py  test_scenarios.py  test_scheduler_pipeline.py  test_sell_signals.py
web/: dashboard.html  history.html  trends.html
(+88 files in other folders)
